# flux7-mesh

./: .gitignore  .goreleaser.yaml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yaml
approval/: memory.go  memory_test.go  notify.go  notify_test.go  persist.go  persist_test.go  store.go  store_test.go
auth/: identity.go  identity_test.go  jwt.go  jwt_test.go
cmd/agent-mesh/: discover.go  main.go  mesh.go  proxy_stdio.go  serve.go
cmd/mesh7/: discover.go  (+6 more)
config/: config.go  config_test.go
docs/: ONE_PAGER.md  approval-flow.md  cli-tools.md  deployment-modes.md  getting-started.md  mem7-auto-approve.md  otel.md  presentation-technique-fr.md  supervisor-protocol.md  writing-policies.md
examples/: demo-eda-governance.yaml  demo-enterprise.yaml  demo-simulate.py  ollama-agent.yaml  travel-agent.yaml
exec/: runner.go  runner_test.go
grant/: persist.go  persist_test.go  store.go
mcp/: client.go  http_server.go  http_server_test.go  server.go  server_test.go  transport_sse.go  transport_sse_test.go
policy/: engine.go  engine_test.go  watcher.go  watcher_test.go
proxy/: handler.go  handler_test.go
ratelimit/: limiter.go  limiter_test.go
registry/: cli.go  openapi.go  registry_test.go
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: claude_api.py
sdk/python/src/agent_mesh/: __init__.py  client.py  toolkit.py
sdk/python/src/mesh7/: __init__.py  client.py  hooks.py  toolkit.py
sdk/python/tests/: test_client.py  test_hooks.py  test_toolkit.py
storage/: sqlite.go  sqlite_test.go
trace/: otel.go
(+21 files in other folders)
