[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux7-mesh"
version = "0.1.0"
description = "Python SDK for flux7-mesh — governance mesh for AI agent tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/KTCrisis/flux7-mesh"
Repository = "https://github.com/KTCrisis/flux7-mesh"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh7"]
